# VIS

./: .clang-format  .gitignore  .gitmodules  Build.sh  BuildDebug.sh  CMakeLists.txt  CMakeSettings.json  Debug.sh  README.md  Run.sh  Setup.sh  run.sh
.nvim/: run.lua
lib/: CMakeLists.txt
lib/glad/: info.md
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
scripts/: Build.lua  BuildDebug.lua  Debug.lua  Run.lua  Setup.lua  SetupDebug.lua  SetupMSVC.lua
src/: application.cpp  application.hpp  application_info.hpp  camera.cpp  camera.hpp  cpu_renderer.cpp  cpu_renderer.hpp  depth_buffer.cpp  depth_buffer.hpp  glad.cpp  glad.hpp  glfw.cpp  glfw.hpp  gpu_api.cpp  gpu_api.hpp  gui.cpp  gui.hpp  image.cpp  image.hpp  main.cpp  main.hpp  perspective_camera.cpp  pipeline.cpp  pipeline.hpp  solid.cpp  solid.hpp  texture.cpp  texture.hpp  vis_utils.hpp  window.cpp  window.hpp
src/solids/: axis.cpp  axis.hpp  cube.cpp  cube.hpp  grid.cpp  grid.hpp  solid.cpp  solid.hpp  square.cpp  square.hpp  triangle.cpp  triangle.hpp
src/utils/: app_info.hpp  color.hpp  scene_info.hpp  timer.hpp  vertex.hpp
